@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/06
+	* Added NK value 0x80: ignore target's cards (0x8 will now only ignore
+	  attacker's cards).
+	* Corrected Soul Breaker ignoring target's cards instead of the caster's.
+	  [Skotlex]
 	* Fixed an infinite loop if script name contains a single ':' [Toms]
 	* Simplified the Utsusemi/Bunsinjyutsu check to only block weapon skills
 	  that do not ignore offensive cards. [Skotlex]
